# FP-Game

./: .gitignore  designdocument.tex  stack.yaml
FP-Bomberman-Game/: FP-Bomberman-Game.cabal  README.md  TO-DO.txt  stack.yaml
FP-Bomberman-Game/app/: Controller.hs  Main.hs  Model.hs  View.hs
FP-Bomberman-Game/src/: Controller.hs  Main.hs  View.hs
FP-Bomberman-Game/src/Model/: Bomb.hs  Bombs.hs  EnemyLogic.hs  GameObject.hs  GameState.hs  Grid.hs  Log.hs  Model.hs  Player.hs  PowerUp.hs  Random.hs
FP-Bomberman-Game/src/Model/Typeclasses/: Destructible.hs  Effectable.hs  HasArea.hs  Positioned.hs  Renderizable.hs
FP-Bomberman-Game/test/: Spec.hs
