name:                FP-Bomberman-Game
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/FP-Bomberman-Game#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          test@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable FP-Bomberman-Game-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       gloss,
                       gloss-game,
                       aeson,
                       random,
                       FP-Bomberman-Game
  default-language:    Haskell2010
source-repository head
  type:     git
  location: https://github.com/githubuser/FP-Bomberman-Game
